# RabendaLib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  license.md  main.cpp
src/: CMakeLists.txt  config.h  empty.cpp
src/basic/: RString.hpp
src/include/rabenda/: lib_common.hpp
src/include/rabenda/basic/: RString.hpp
src/include/rabenda/monad/Class/: Applicative.hpp  Apply.hpp  Bind.hpp  Foldable.hpp  Functor.hpp  Monoid.hpp  Semigroup.hpp  Show.hpp
src/include/rabenda/monad/Data/: Maybe.hpp
src/include/rabenda/reflection/: Object.hpp  robject.hpp
src/include/rabenda/stl/: concept_checks.hpp  defalloc.hpp  stl_algobase.hpp  stl_alloc.hpp  stl_config.hpp  stl_construct.hpp  stl_function.hpp  stl_iterator.hpp  stl_iterator_base.hpp  stl_numeric.hpp  stl_pair.hpp  stl_uninitialized.hpp  type_traits.hpp
src/monad/: Functor.hpp  Monoid.hpp  Semigroup.hpp  Show.hpp
src/monad/Class/: Applicative.hpp  Apply.hpp  Bind.hpp  Foldable.hpp  Functor.hpp  Monoid.hpp  Semigroup.hpp  Show.hpp
src/monad/Data/: Maybe.hpp
src/reflection/: Object.hpp
src/stl/: defalloc.hpp  stl.cmake  stl_algobase.h  stl_algobase.hpp  stl_config.h  stl_config.hpp  stl_construct.hpp  stl_function.h  stl_function.hpp  stl_iterator.h  stl_iterator.hpp  stl_iterator_base.hpp  stl_numeric.h  stl_numeric.hpp  stl_pair.h  stl_pair.hpp  stl_uninitialized.hpp  type_traits.h  type_traits.hpp
